--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+errno = "0.2.7"
+libc = "0.2.95"
 libcaca-sys = { path = "../rust-libcaca-sys" }
+thiserror = "1.0.25"
 
 [features]
 default = []
-ncurses = ["libcaca-sys/ncurses"]
-slang = ["libcaca-sys/slang"]
-gl = ["libcaca-sys/gl"]
-network = ["libcaca-sys/network"]
-imlib2 = ["libcaca-sys/imlib2"]
 conio = ["libcaca-sys/conio"]
 win32 = ["libcaca-sys/win32"]
 x11 = ["libcaca-sys/x11"]
 #cocoa = ["libcaca-sys/cocoa"]
-full = ["ncurses", "slang", "gl", "network", "imlib2", "conio", "win32", "x11"]
+full = ["conio", "win32", "x11"]
